--- a/InspireVerbier/Base.lproj/Main.storyboard
+++ b/InspireVerbier/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IyT-PE-Ksz">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -14,11 +14,11 @@
             <objects>
                 <viewController storyboardIdentifier="SecondViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SecondViewController" customModule="InspireVerbier" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iEn-en-goh">
-                                <rect key="frame" x="0.0" y="121.66666666666669" width="430" height="776.33333333333326"/>
+                                <rect key="frame" x="0.0" y="62.5" width="375" height="604.5"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -26,7 +26,7 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gv7-JR-P8W">
-                                <rect key="frame" x="26" y="79" width="62" height="34.666666666666657"/>
+                                <rect key="frame" x="26" y="20" width="62" height="34.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Back"/>
                                 <connections>
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L0P-rb-l1p">
-                                <rect key="frame" x="334.66666666666669" y="79" width="86.333333333333314" height="34.666666666666657"/>
+                                <rect key="frame" x="279.5" y="20" width="86.5" height="34.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Forward"/>
                                 <connections>
@@ -73,11 +73,14 @@
             <objects>
                 <viewController storyboardIdentifier="FirstViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="IyT-PE-Ksz" customClass="FirstViewController" customModule="InspireVerbier" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iCb-1B-zBg">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="InspireFirst.png" translatesAutoresizingMaskIntoConstraints="NO" id="hHY-ee-vJK">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INSPIRE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Mb-EP-Qy8">
-                                <rect key="frame" x="143" y="132" width="144" height="45.666666666666657"/>
+                                <rect key="frame" x="115.5" y="73" width="144" height="45.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="144" id="xfx-MW-n6d"/>
                                 </constraints>
@@ -86,41 +89,39 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THE HEART OF YOUR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSU-Q6-LJr">
-                                <rect key="frame" x="221" y="219" width="193" height="23"/>
+                                <rect key="frame" x="166" y="148.5" width="193" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="193" id="gHc-D2-CfN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <color key="textColor" red="0.80987197160000002" green="0.64963663260000004" blue="0.27008252830000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEALTH AND FITNESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4U9-fE-b99">
-                                <rect key="frame" x="211" y="267" width="203" height="23"/>
+                                <rect key="frame" x="156" y="181.5" width="203" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="193" id="hFK-B1-74E"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <color key="textColor" red="0.80987197160000002" green="0.64963663260000004" blue="0.27008252830000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JOURNEY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qEv-ii-jhb">
-                                <rect key="frame" x="323" y="315" width="91" height="23"/>
+                                <rect key="frame" x="268" y="214.5" width="91" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="91" id="gxW-Xh-1lr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <color key="textColor" red="0.80987197160000002" green="0.64963663260000004" blue="0.27008252830000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Allow tracking on the next screen. We need it for working of this application" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KqW-uo-TuG">
-                                <rect key="frame" x="16" y="419" width="398" height="45.666666666666686"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <color key="textColor" red="0.80987197160000002" green="0.64963663260000004" blue="0.27008252830000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-XP-E8e">
-                                <rect key="frame" x="168.66666666666666" y="776" width="92.999999999999972" height="35"/>
+                                <rect key="frame" x="97.5" y="557" width="180" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="aes-oE-WAM"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="hD0-Uk-tJ6"/>
+                                </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Continue">
@@ -134,20 +135,21 @@
                         <viewLayoutGuide key="safeArea" id="plk-T7-Rcd"/>
                         <color key="backgroundColor" red="0.05294848211" green="0.98921168609999999" blue="0.67318978350000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="rSU-Q6-LJr" firstAttribute="top" secondItem="5Mb-EP-Qy8" secondAttribute="bottom" constant="41.333333333333314" id="08m-Jg-Eqm"/>
+                            <constraint firstItem="rSU-Q6-LJr" firstAttribute="top" secondItem="5Mb-EP-Qy8" secondAttribute="bottom" constant="30" id="08m-Jg-Eqm"/>
                             <constraint firstItem="5Mb-EP-Qy8" firstAttribute="centerX" secondItem="plk-T7-Rcd" secondAttribute="centerX" id="6mq-Bx-dzH"/>
                             <constraint firstItem="plk-T7-Rcd" firstAttribute="trailing" secondItem="rSU-Q6-LJr" secondAttribute="trailing" constant="16" id="7nf-cw-Iir"/>
                             <constraint firstItem="4U9-fE-b99" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="plk-T7-Rcd" secondAttribute="leading" symbolic="YES" id="AEY-Jn-EtD"/>
+                            <constraint firstAttribute="bottom" secondItem="hHY-ee-vJK" secondAttribute="bottom" id="CC6-U7-M8Z"/>
                             <constraint firstItem="5Mb-EP-Qy8" firstAttribute="top" secondItem="plk-T7-Rcd" secondAttribute="top" constant="73" id="DY7-3D-tVq"/>
-                            <constraint firstItem="plk-T7-Rcd" firstAttribute="trailing" secondItem="KqW-uo-TuG" secondAttribute="trailing" constant="16" id="LYP-pE-Erv"/>
                             <constraint firstItem="qEv-ii-jhb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="plk-T7-Rcd" secondAttribute="leading" symbolic="YES" id="MVY-uR-5cj"/>
-                            <constraint firstItem="qEv-ii-jhb" firstAttribute="top" secondItem="4U9-fE-b99" secondAttribute="bottom" constant="25" id="S4m-4V-PAq"/>
-                            <constraint firstItem="KqW-uo-TuG" firstAttribute="leading" secondItem="plk-T7-Rcd" secondAttribute="leading" constant="16" id="XI5-d6-rYb"/>
-                            <constraint firstItem="plk-T7-Rcd" firstAttribute="bottom" secondItem="GM9-XP-E8e" secondAttribute="bottom" constant="87" id="ZvZ-DM-XMk"/>
+                            <constraint firstItem="hHY-ee-vJK" firstAttribute="trailing" secondItem="plk-T7-Rcd" secondAttribute="trailing" id="OCQ-3R-8kp"/>
+                            <constraint firstItem="qEv-ii-jhb" firstAttribute="top" secondItem="4U9-fE-b99" secondAttribute="bottom" constant="10" id="S4m-4V-PAq"/>
+                            <constraint firstItem="hHY-ee-vJK" firstAttribute="leading" secondItem="plk-T7-Rcd" secondAttribute="leading" id="X7V-AE-Zts"/>
+                            <constraint firstItem="plk-T7-Rcd" firstAttribute="bottom" secondItem="GM9-XP-E8e" secondAttribute="bottom" constant="60" id="ZvZ-DM-XMk"/>
                             <constraint firstItem="GM9-XP-E8e" firstAttribute="centerX" secondItem="plk-T7-Rcd" secondAttribute="centerX" id="bmc-C4-vIs"/>
                             <constraint firstItem="plk-T7-Rcd" firstAttribute="trailing" secondItem="qEv-ii-jhb" secondAttribute="trailing" constant="16" id="dTm-Mz-fc1"/>
-                            <constraint firstItem="4U9-fE-b99" firstAttribute="top" secondItem="rSU-Q6-LJr" secondAttribute="bottom" constant="25" id="iu2-gD-asd"/>
-                            <constraint firstItem="KqW-uo-TuG" firstAttribute="top" secondItem="qEv-ii-jhb" secondAttribute="bottom" constant="81" id="jcZ-Z5-7cG"/>
+                            <constraint firstItem="4U9-fE-b99" firstAttribute="top" secondItem="rSU-Q6-LJr" secondAttribute="bottom" constant="10" id="iu2-gD-asd"/>
+                            <constraint firstItem="hHY-ee-vJK" firstAttribute="top" secondItem="iCb-1B-zBg" secondAttribute="top" id="jjh-wk-XRa"/>
                             <constraint firstItem="plk-T7-Rcd" firstAttribute="trailing" secondItem="4U9-fE-b99" secondAttribute="trailing" constant="16" id="s1F-aL-l9M"/>
                             <constraint firstItem="rSU-Q6-LJr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="plk-T7-Rcd" secondAttribute="leading" symbolic="YES" id="vlU-qx-f51"/>
                         </constraints>
@@ -158,12 +160,16 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nfn-Vp-5xN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-669.60000000000002" y="74.630541871921181"/>
+            <point key="canvasLocation" x="-671.20000000000005" y="73.313343328335833"/>
         </scene>
     </scenes>
     <resources>
+        <image name="InspireFirst.png" width="505" height="706"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
