--- a/InspireVerbier/Base.lproj/Main.storyboard
+++ b/InspireVerbier/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="27.536231884057973" y="75"/>
+            <point key="canvasLocation" x="26.153846153846153" y="74.644549763033169"/>
         </scene>
         <!--First View Controller-->
         <scene sceneID="TgX-ZM-IJN">
